Issue #12824 add lib/eeXX/ext modules (#12864)